# fairybrowser

./: .gitignore  LICENSE  README.md  pyproject.toml
src/fairybrowser/: __init__.py  models.py  monitors.py  port_utils.py  process_utils.py  runners.py  utils.py
src/fairybrowser/devtools/: __init__.py  analyzers.py  collectors.py  models.py
src/fairybrowser/windows/: editors.py  models.py  players.py  recorders.py
tests/: test_analyzers.py  test_monitors.py  test_monitors_more.py  test_port_utils.py  test_port_utils_more.py
tests/devtools/: test_models.py
